--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -678,7 +678,7 @@
   ],
   "badgeTemplate": "<a href=\"#contributors-\"><img alt=\"All Contributors\" src=\"https://img.shields.io/badge/all_contributors-<%= contributors.length %>-orange.svg\"/></a>",
   "contributorsPerLine": 7,
-  "projectName": "overseerr",
+  "projectName": "animarr",
   "projectOwner": "sct",
   "repoType": "github",
   "repoHost": "https://github.com",
