--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
   - name: 💬 Support via Discord
-    url: https://discord.gg/overseerr
-    about: Chat with other users and the Overseerr dev team
+    url: https://discord.gg/animarr
+    about: Chat with other users and the Animarr dev team
   - name: 💬 Support via GitHub Discussions
-    url: https://github.com/sct/overseerr/discussions
+    url: https://github.com/sct/animarr/discussions
     about: Ask questions and discuss with other community members
