--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,4 +1,4 @@
-name: Overseerr Preview
+name: Animarr Preview
 
 on:
   push:
@@ -40,5 +40,5 @@ jobs:
           build-args: |
             COMMIT_TAG=${{ github.sha }}
           tags: |
-            sctx/overseerr:${{ steps.get_version.outputs.VERSION }}
-            ghcr.io/sct/overseerr:${{ steps.get_version.outputs.VERSION }}
+            sctx/animarr:${{ steps.get_version.outputs.VERSION }}
+            ghcr.io/sct/animarr:${{ steps.get_version.outputs.VERSION }}
