--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "overseerr",
+  "name": "animarr",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon -e ts --watch server --watch overseerr-api.yml -e .json,.ts,.yml -x ts-node --files --project server/tsconfig.json server/index.ts",
+    "dev": "nodemon -e ts --watch server --watch animarr-api.yml -e .json,.ts,.yml -x ts-node --files --project server/tsconfig.json server/index.ts",
     "build:server": "tsc --project server/tsconfig.json && copyfiles -u 2 server/templates/**/*.{html,pug} dist/templates",
     "build:next": "next build",
     "build": "yarn build:next && yarn build:server",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sct/overseerr.git"
+    "url": "https://github.com/sct/animarr.git"
   },
   "license": "MIT",
   "dependencies": {
@@ -207,8 +207,8 @@
           "COMMIT_TAG": "$GITHUB_SHA"
         },
         "imageNames": [
-          "sctx/overseerr",
-          "ghcr.io/sct/overseerr"
+          "sctx/animarr",
+          "ghcr.io/sct/animarr"
         ],
         "platforms": [
           "linux/amd64",
